// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pill /> matches render snapshot - active 1`] = `
<button
  className="pill pill_selected"
  name="pill1"
  onClick={[Function]}
  style={
    Object {
      "background": "#5e2ca5",
      "borderColor": "#5e2ca5",
    }
  }
>
  Test Pill Button
</button>
`;

exports[`<Pill /> matches render snapshot - inactive 1`] = `
<button
  className="pill"
  name="pill1"
  onClick={[Function]}
  style={
    Object {
      "background": "white",
      "borderColor": "#ccc",
    }
  }
>
  Test Pill Button
</button>
`;
